// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> should render Text with center textAlign 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    color="surface.text.normal.lowContrast"
    data-blade-component="text"
    fontFamily="text"
    fontSize={100}
    fontStyle="normal"
    fontWeight="regular"
    lineHeight={100}
    style={
      Array [
        Object {
          "color": "hsla(217, 56%, 17%, 1)",
          "fontFamily": "Lato",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 20,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textAlign": "center",
          "textDecorationLine": "none",
        },
      ]
    }
    textAlign="center"
  >
    Displaying some text
  </Text>
</View>
`;

exports[`<Text /> should render Text with color 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    color="surface.text.muted.lowContrast"
    data-blade-component="text"
    fontFamily="text"
    fontSize={100}
    fontStyle="normal"
    fontWeight="regular"
    lineHeight={100}
    style={
      Array [
        Object {
          "color": "hsla(216, 16%, 60%, 1)",
          "fontFamily": "Lato",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 20,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Displaying some text
  </Text>
</View>
`;

exports[`<Text /> should render Text with default properties 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    color="surface.text.normal.lowContrast"
    data-blade-component="text"
    fontFamily="text"
    fontSize={100}
    fontStyle="normal"
    fontWeight="regular"
    lineHeight={100}
    style={
      Array [
        Object {
          "color": "hsla(217, 56%, 17%, 1)",
          "fontFamily": "Lato",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 20,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Displaying some text
  </Text>
</View>
`;

exports[`<Text /> should render Text with variant "body" 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    color="surface.text.normal.lowContrast"
    data-blade-component="text"
    fontFamily="text"
    fontSize={100}
    fontStyle="normal"
    fontWeight="bold"
    lineHeight={100}
    numberOfLines={3}
    style={
      Array [
        Object {
          "WebkitBoxOrient": "vertical",
          "WebkitLineClamp": 3,
          "color": "hsla(217, 56%, 17%, 1)",
          "display": "-webkit-box",
          "fontFamily": "Lato",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineClamp": 3,
          "lineHeight": 20,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "overflow": "hidden",
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Displaying some text
  </Text>
</View>
`;

exports[`<Text /> should render Text with variant "body" and contrast "high" 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    color="surface.text.normal.highContrast"
    data-blade-component="text"
    fontFamily="text"
    fontSize={100}
    fontStyle="normal"
    fontWeight="bold"
    lineHeight={100}
    numberOfLines={3}
    style={
      Array [
        Object {
          "WebkitBoxOrient": "vertical",
          "WebkitLineClamp": 3,
          "color": "hsla(0, 0%, 100%, 1)",
          "display": "-webkit-box",
          "fontFamily": "Lato",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineClamp": 3,
          "lineHeight": 20,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "overflow": "hidden",
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Displaying some text
  </Text>
</View>
`;

exports[`<Text /> should render Text with variant "body" and size "small" 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    color="surface.text.normal.lowContrast"
    data-blade-component="text"
    fontFamily="text"
    fontSize={75}
    fontStyle="normal"
    fontWeight="bold"
    lineHeight={50}
    numberOfLines={3}
    style={
      Array [
        Object {
          "WebkitBoxOrient": "vertical",
          "WebkitLineClamp": 3,
          "color": "hsla(217, 56%, 17%, 1)",
          "display": "-webkit-box",
          "fontFamily": "Lato",
          "fontSize": 12,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineClamp": 3,
          "lineHeight": 16,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "overflow": "hidden",
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Displaying some text
  </Text>
</View>
`;

exports[`<Text /> should render Text with variant "caption" 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    color="surface.text.normal.lowContrast"
    data-blade-component="text"
    fontFamily="text"
    fontSize={100}
    fontStyle="normal"
    fontWeight="bold"
    lineHeight={100}
    style={
      Array [
        Object {
          "color": "hsla(217, 56%, 17%, 1)",
          "fontFamily": "Lato",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "700",
          "lineHeight": 20,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "textDecorationLine": "none",
        },
      ]
    }
  >
    Displaying some text
  </Text>
</View>
`;
